# python-clean-architecture-boilerplate

./: .gitignore  .renovaterc.json  Dockerfile  LICENSE  README.md  pyproject.toml
config/: configuration.yaml  default.yaml  production.yaml
src/: __init__.py  main.py
src/api/: __init__.py  router_config.py
src/api/v1/: user.py
src/app/: __init__.py
src/app/api/: router_config.py
src/app/api/v1/: user.py
src/app/entities/: user.py
src/app/repositories/: __init__.py  user.py
src/app/use_cases/: get_user.py
src/dtos/: __init__.py  user.py
src/entities/: __init__.py  base_entity.py  user.py
src/infra/: __init__.py  config.py  containers.py
src/interfaces/: __init__.py  user_repository.py
src/repositories/: __init__.py  user.py
src/routers/: router_config.py
src/routers/v1/: __init__.py  user.py
src/use_cases/: __init__.py  get_user.py
tests/: __init__.py  test_get_user_use_case.py  test_get_user_usecase.py  test_main.py
